feat: 更换过时方法